# Snake-Game

./: CMakeLists.txt
src/: fruit.cpp  fruit.hpp  main.cpp  main.hpp  snake.cpp  snake.hpp
